--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 :root{
     --primary-color: #d686e0;
-    --primary-color-dark: #9949a3;
+    --primary-color-dark: #7e3b86;
     --text-dark: #333333;
     --text-light: #767268;
-    --extra-light: #fcefcb;
+    --extra-light: #efcef1;
 }
 
 *{
@@ -22,4 +22,90 @@ body{
     justify-content: center;
     background-color: var(--extra-light);
     font-family: "Roboto", sans-serif;
+}
+
+
+.container{
+    max-width: 400px;
+    padding: 2rem;
+    margin: auto;
+    display: grid;
+    color: var(--text-dark);
+}
+
+.header{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.header h1{
+    font-size: 4rem;
+    font-weight: 900;
+}
+
+.container h3{
+    font-size: 2rem;
+    font-weight: 900;
+}
+
+.container img{
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+}
+
+.footer{
+    display: grid;
+    gap: 2rem;
+    place-content: baseline;
+}
+
+.footer p{
+    font-variation-settings: 1rem;
+}
+
+.footer button{
+    padding: 1rem;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    color: var(--primary-color-dark);
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: var(--primary-color);
+    cursor: pointer;
+    transition: .3s;
+}
+
+.footer button:hover{
+    background-color: var(--primary-color-dark);
+    color: var(--primary-color);
+}
+
+@media (min-width: 640px){
+    .container{
+        max-width: 1200px;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+    .container img{
+        max-width: 550px;
+        grid-area: 1/1/3/2;
+    }
+    .footer{
+        max-width: 300px;
+    }
+}
+
+@media (min-width: 1024px) {
+    .container{
+        column-gap: 5rem;
+    }
+    .header h1{
+        font-size: 6rem;
+    }
+    .header h3{
+        font-size: 2.5rem;
+    }
 }
